--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,16 @@ data/transcripts/
 # logs
 logs/
 *.log
+
+# large generated brain artifacts / backups
+brain/archives/
+brain/backups/
+brain/jsonl/
+brain/csv/
+brain/*.backup*
+brain/*backup*
+brain/*copy*
+brain/*old*
+brain/*.jsonl
+brain/*.csv
+
