--- a/src/scrapers/package.json
+++ b/src/scrapers/package.json
@@ -1,1 +1,1 @@
-{"type":"module","dependencies":{"axios-cookiejar-support":"^6.0.5","csv-parse":"^6.1.0","he":"^1.2.0","tough-cookie":"^6.0.0"}}
+{"type":"module","dependencies":{"axios-cookiejar-support":"^6.0.5","csv-parse":"^6.1.0","dotenv":"^17.2.3","he":"^1.2.0","openai":"^6.15.0","tough-cookie":"^6.0.0","xlsx":"^0.18.5"}}
