Add .gitignore for large output files and remove from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,16 @@ brain/*old*
 brain/*.jsonl
 brain/*.csv
 
+
+# Brain output files (too large for GitHub)
+src/output/*.jsonl
+src/output/*.csv
+output/*.jsonl
+output/*.csv
+
+# Logs
+src/logs/
+logs/
+
+# Node modules
+node_modules/
